@@ -9,7 +9,7 @@
   }
 }
 
-.manage-labels-list {
+.label-row {
   .label {
     padding: 9px;
     font-size: 14px;
