@@ -11,7 +11,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema.define(version: 20160209130428) do
+ActiveRecord::Schema.define(version: 20160217100506) do
 
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
@@ -442,7 +442,8 @@ ActiveRecord::Schema.define(version: 20160209130428) do
     t.integer  "project_id"
     t.datetime "created_at"
     t.datetime "updated_at"
-    t.boolean  "template",   default: false
+    t.boolean  "template",    default: false
+    t.string   "description"
   end
 
   add_index "labels", ["project_id"], name: "index_labels_on_project_id", using: :btree
